# agents-last-exam

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  LICENSE  LICENSE-DATA  README.md  dummy_exp.yaml  example_exp.yaml  exp_aws_hello.yaml  exp_aws_hello_s3.yaml  exp_aws_hello_win.yaml  inspection_exp.yaml  inspection_kasm_exp.yaml  pyproject.toml
ale/: __init__.py  __main__.py  cli.py  registry.py
ale/agents/: base.py  install_paths.py  runtime_install.py  trajectory.py
ale/agents/claude_code/: __init__.py  config.py  deployer.py  pyproject.toml
ale/core/: cmd_result.py  env.py  loader.py  provider.py  task_data.py  types.py
ale/io/: __init__.py  artifact_mirror.py  data_staging.py  incremental_pull.py  run_writer.py
ale/providers/: gcs_direct.py  static.py
ale/runner/: __init__.py  factory.py  lifecycle.py  loader.py  runner.py  spec.py
ale/runtime/: __init__.py  _env.py  _vm_entry.py  docker_executor.py  executor.py  local_executor.py  vm.py  vm_executor.py
ale_run/: cli.py
ale_run/agents/: _bootstrap.py  base.py  trajectory.py
ale_run/agents/ale_claw/: README.md  __init__.py  config.py  deployer.py  pyproject.toml  transcript_to_trajectory.py
ale_run/agents/ale_claw/harness/: AGENTS.md  __init__.py  _tool_utils.py  agent_loop.py  agent_loop_helpers.py  analyze_image.py  canonical.py  canonical_sanitize.py  canonical_types.py  computer_handler.py  context.py  fs_backends.py  image_sanitization.py  memory.py  memory_flush.py  memory_flush_policy.py  milestone.py  model_config.py  prompt.py  replay.py  session.py  subagent_general.py  subagent_gui.py  subagent_gui_protocol.py  subagent_registry.py  subagent_session.py  subagent_tools.py  thinking.py  tools.py  tools_fs.py  tools_shell.py  tools_web.py  transcript.py  unified_loop.py
ale_run/agents/ale_claw/harness/adapters/: __init__.py  image_retention.py  trajectory_saver.py
ale_run/agents/ale_claw/harness/canonical/: canonical.py
ale_run/agents/ale_claw/harness/context/: compaction.py  context.py  replay.py  token_estimation.py  transcript.py
ale_run/agents/ale_claw/harness/inference/: _message_shapes.py  model_config.py
ale_run/agents/ale_claw/harness/memory/: memory.py  memory_flush.py  memory_flush_policy.py
ale_run/agents/ale_claw/harness/model/: cache_policy.py  helper_runtime.py  image_sanitization.py  model_config.py  thinking.py  unified_loop.py
ale_run/agents/ale_claw/harness/subagent/: subagent_gui.py  subagent_session.py  subagent_tools.py
ale_run/agents/ale_claw/harness/tools/: _paths.py  analyze_image.py  computer_handler.py  fs_backends.py  mcp_runtime.py  milestone.py  tools.py  tools_fs.py  tools_shell.py
ale_run/agents/car/: README.md  __init__.py  config.py  deployer.py  pyproject.toml  transcript_to_trajectory.py
ale_run/agents/codex/: AGENTS.md  README.md  __init__.py  config.py  deployer.py  pyproject.toml
ale_run/agents/droid/: AGENTS.md  README.md  __init__.py  config.py  deployer.py  pyproject.toml
ale_run/agents/dummy/: __init__.py  config.py  deployer.py  pathscan.py  pyproject.toml
ale_run/agents/grok_cli/: AGENTS.md  README.md  __init__.py  config.py  deployer.py  pyproject.toml
ale_run/agents/hermes/: AGENTS.md  README.md  __init__.py  config.py  deployer.py  pyproject.toml
ale_run/agents/terminus_2/: AGENTS.md  README.md  __init__.py  config.py  deployer.py  pyproject.toml
ale_run/base_interface/: __init__.py  agent_deployer.py  agent_runtime.py  compute_env.py  deployer.py  executor.py  provider.py  remote_vm.py  runtime.py  sandbox.py  task.py  task_data.py  trajectory.py
ale_run/environments/: __init__.py  data_staging.py  env.py  force_timeout.py  images.py  machine_types.py  output_pull.py  remote.py
ale_run/executors/: Dockerfile.native_base  __init__.py  _docker_entry.py  _sandbox_entry.py  _secrets.py  docker.py  local.py  sandbox.py
ale_run/orchastration/: __init__.py  config_loader.py  experiment_spec.py  factory.py  gather.py  incremental_puller.py  lifecycle.py  monitor.py  run_writer.py  runner.py  runtime.py  slug.py  spec.py  sync_helpers.py  termination.py  vm_executor.py
ale_run/orchestration/: __init__.py  config_loader.py  experiment_spec.py  factory.py  lifecycle.py  run_writer.py  runner.py  termination.py
ale_run/tasks/: __init__.py  driver.py  loader.py  task_env.py
configs/agents/: ale_claw.yaml  ale_claw_local.yaml  ale_claw_or.yaml  car.yaml  cc_opus.yaml  cc_sonnet.yaml  cc_sonnet_direct_t15.yaml  cc_sonnet_direct_t3.yaml  cc_sonnet_or_base.yaml  cc_sonnet_or_t120.yaml  cc_sonnet_or_t15.yaml  cc_sonnet_or_t3.yaml  claude_code.yaml  codex.yaml  codex_gpt54_direct.yaml  codex_gpt54_or.yaml  cursor_auto_cursor.yaml  cursor_auto_or.yaml  cursor_cli.yaml  cursor_composer25_cursor.yaml  cursor_sonnet_cursor.yaml  cursor_sonnet_or.yaml  droid.yaml  droid_sonnet_or.yaml  dummy.yaml  forge_sonnet_or.yaml  forgecode.yaml  gemini_cli.yaml  gemini_g25flash_or_base.yaml  gemini_g25flash_or_toolrestricted.yaml  gemini_g31flashlite_or.yaml  gemini_g31pro_or.yaml  grok_cli.yaml  (+14 more)
docs/: AGENTS.md  ALE_CLAW_MCP_PLAN.md  DESIGN.md  EXTEND_AGENTS.md  EXTEND_ENVIRONMENTS.md  EXTEND_TASKS.md  RUN_TASKS.md  SESSION_API.md  SESSION_API_TEST_REPORT.md  SETUP_GCP.md  SETUP_LOCAL.md  SETUP_VMWARE.md  aws-provider-analysis.md  aws-setup.md  quickstart.md
env/: DEV_VM_MISSING_ENV.md  PROGRESS.md  README.md  TASK_VALIDITY_ISSUES.md  install_task_deps.sh  verify_task_env.sh
experiments/: smoke_droid_docker.yaml  smoke_grok_docker.yaml
sample_run/: LOG_SPEC.md  eval_result.json  events.jsonl  run.json  trajectory.json
secret/: .env.example
selected_tasks/: INSTALL_DEPS_PROGRESS.md  _inspection_all.txt  aws_hello.txt  full-spectrum.txt  full.txt  helloworld.txt  last-exam.txt  linux_no_dind.txt  linux_only.txt  near-term.txt  near-term.yaml  unlicensed.txt
tasks/: common_config.py  common_setup.py  linux_runtime.py  published_tasks.json  pyproject.toml
tests/: smoke_car_transcript.py  smoke_data_staging.py  smoke_hello.py  smoke_installed_agent.py  smoke_native_agent.py  smoke_runtime_validation.py
(+973 files in other folders)
