[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-last-exam"
version = "0.1.0"
description = "Agent benchmark framework. Upper-layer-only replacement for agenthle orchestration."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Framework essentials only. Per-agent deps live in
    # `ale/agents/<agent>/pyproject.toml` (uv workspace members below).
    "openenv-core",
    "cua-bench",        # framework needs cb.DesktopSession for env/session
    "pydantic>=2.0",
    "httpx>=0.27",
    "anyio>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.uv.workspace]
# Each agent declares its own deps in ale/agents/<agent>/pyproject.toml.
# Per-agent docker images can `uv sync` against just their own pyproject
# for true isolation.
#
# IMPORTANT: To install agent deps into the dev venv, you must use:
#     uv sync --all-packages --extra dev
# Plain `uv sync` only installs root deps (cua-bench / pydantic / etc.)
# and skips every agent's deps. There's no "default install all members"
# uv setting; it's an explicit flag.
members = ["ale/agents/*"]
exclude = ["ale/agents/_assets"]  # vendored MCP server JS, not a Python package

[tool.uv.sources]
# Shared across the workspace — root sources apply to all members so
# each per-agent pyproject can just declare `cua-agent` (etc.) by name.
openenv-core = { path = "../OpenEnv", editable = true }
cua-bench    = { path = "../agenthle/submodules/cua/libs/cua-bench",   editable = true }
cua-agent    = { path = "../agenthle/submodules/cua/libs/python/agent",    editable = true }
cua-computer = { path = "../agenthle/submodules/cua/libs/python/computer", editable = true }
cua-core     = { path = "../agenthle/submodules/cua/libs/python/core",     editable = true }

[tool.hatch.build.targets.wheel]
# Two top-level packages: framework (`ale/`) and task library (`tasks/`).
# `tasks/` is a PEP 420 namespace package — no __init__.py files.
packages = ["ale", "tasks"]

[tool.hatch.build.targets.wheel.sources]
"ale" = "ale"
"tasks" = "tasks"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
