[project]
name = "ale-car"
version = "0.1.0"
description = "Common Agent Runtime (CAR) deployer for Agents' Last Exam."
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []
sources = {}
bypass-selection = true
