[project]
name = "ale-droid"
version = "0.1.0"
description = "Droid (Factory.ai) in-sandbox deployer for ALE."
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []
sources = {}
bypass-selection = true
