[project]
name = "ale-dummy"
version = "0.1.0"
description = "Dummy no-LLM smoke agent for ALE pipeline validation."
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []
sources = {}
bypass-selection = true
