[project]
name = "ale-grok-cli"
version = "0.1.0"
description = "Grok CLI in-sandbox deployer for ALE."
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []
sources = {}
bypass-selection = true
