[project]
name = "ale-hermes"
version = "0.1.0"
description = "Hermes Agent (NousResearch) in-sandbox deployer for ALE."
requires-python = ">=3.12,<3.14"
dependencies = ["pyyaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []
sources = {}
bypass-selection = true
